syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";


message TSSVoter {
  string creator = 1;
  string chain = 2;
  string tss_address = 3;
  string tss_pubkey = 4;
  uint64 keyGenZetaHeight = 5;
}
