syntax = "proto3";
package MetaProtocol.metacore.metacore;

option go_package = "github.com/Meta-Protocol/metacore/x/metacore/types";

import "gogoproto/gogo.proto";

message SendVoter {
  string creator = 1;
  string index = 2;
  string sender = 3; 
  string senderChainId = 4; 
  string receiver = 5; 
  string receiverChainId = 6; 
  string mBurnt = 7; 
  string message = 8; 
  string txHash = 9; 
  uint64 blockHeight = 10;
}
